AbstractClient: Re-check screen rules on screen enabled

BUG: 409979
FIXED-IN: 5.25