src/workspace.cpp
@@ -1227,6 +1227,11 @@ void Workspace::slotOutputEnabled(Output *output)
 
     connect(output, &Output::geometryChanged, this, &Workspace::desktopResized);
     desktopResized();
+
+    // Trigger a re-check of output-related rules on all clients
+    for (AbstractClient *client : qAsConst(m_allClients)) {
+        sendClientToOutput(client, client->output());
+    }
 }
 
 void Workspace::slotOutputDisabled(Output *output)
